<resources>
    <string name="app_name">airbnb</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Name_hint">Name</string>
    <string name="Prenume_hint">First Name</string>
    <string name="Email_hint">email</string>
    <string name="z" />
    <string name="Phone_hint">phone</string>
    <string name="btn_Register">Register</string>
</resources>